--- a/test-rest/css/style.css
+++ b/test-rest/css/style.css
@@ -1,5 +1,4 @@
 /*whole map*/
-/*whole map*/
 html, body, #map {
   height: 100%;
   width: 100%;
@@ -25,8 +24,14 @@ body {
   color: rgb(255, 189, 0);
 
 }
- .leaflet-control{
-   display:none;
+
+
+ /* .leaflet-control{ */
+   /* display:none; */
+ /* } */
+ 
+ a.leaflet-control-zoom-in, a.leaflet-control-zoom-out{
+	 display:none;
  }
 
 /* browser interprets title as h1 so use this for styling title */
@@ -109,6 +114,51 @@ h1{
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 900;
   font-size: 14px;
+}
+
+
+
+
+//Search bar
+.leaflet-center {
+	width: 40%;
+	margin-left: auto;
+	margin-right: auto;
+	position: relative;
+}
+.leaflet-control-geosearch, .leaflet-control-geosearch ul {
+	border-radius: 7px;
+	background: none repeat scroll 0 0 rgba(0, 0, 0, 0.25);
+	margin: 10px 0 0 0;
+	top: 7em;
+	padding: 5px;
+	margin-left:12px;
+	width: 250px;
+	height: auto;
+}
+.leaflet-control-geosearch-msg ul {
+	list-style: none;
+	display: none;
+	height: auto;
+	background: none;
+	padding: 0;
+}
+.leaflet-control-geosearch ul li {
+	background: none repeat scroll 0 0 rgba(255, 255, 255, 0.75);
+    border-radius: 4px;
+    margin: 20px 0;
+    padding: 4px;
+    font: 12px arial;
+    text-indent: 4px;
+}
+.leaflet-container .leaflet-control-geosearch input {
+	width: 100%;
+	height: 28px;
+	padding: 0;
+	text-indent: 8px;
+	background: rgba(255, 255, 255, 0.75);			
+	border-radius: 4px;
+	border: none;
 }
 
 
@@ -200,4 +250,3 @@ h1{
 	font-size:12px;
   }
 }
-
