--- a/css/style.css
+++ b/css/style.css
@@ -126,24 +126,9 @@ h1{
 }
 
 
-/* MOBILE MENU ICON STYLING*/
-.hamburger {
-    width: 30px;
-    height: 3.5px;
-    background-color: rgba(255,189,0, 1);
-    margin: 6px 0;
-	z-index:1000002;
-}
-
-
-
 
 /*MOBILE MENU DROPDOWN*/
 
-/* SHOW THE DROPDOWN MENU ON HOVER */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
 
 
 /* POSITION THE CONTAINER */
@@ -156,15 +141,15 @@ h1{
 /* DROPDOWN CONTENT (HIDDEN BY DEFAULT) */
 .dropdown-content {
     display: none;
-    min-width: 6em;
+    min-width: 3.7em;
     padding-right:1em;
-    padding-top: .em;
+    padding-top: .3em;
     z-index: 133248223423423;
 }
 
 /* STYLING THE LINKS INSIDE THE DROPDOWN  */
 .dropdown-content a {
-    font-size: 18px !important;
+    font-size: 16px !important;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     padding-top:.5em;
     text-decoration: none;
@@ -197,7 +182,6 @@ h1{
  
  
  /* GETS RID OF BASE LAYER CONTROLS */
-
 
 .leaflet-control-layers-base, .leaflet-control-layers-separator {
   display: none;
@@ -430,16 +414,14 @@ h1{
  #mobile-title{
 	  display:block;
  }
- 
-/* MAKE MENU ICON PRETTY*/
-#menu-icon{
-	padding-top:1em;
+
+.dropdown-content {
+    display: block;
 }
- 
 
  
  h1 {
-     font-size:26px;
+     font-size:24px;
      line-height:1.3;
      padding-left:.3em;
   }
