--- a/css/style.css
+++ b/css/style.css
@@ -322,27 +322,13 @@ h1{
   h1{
     font-size:22px;
   }
-  
-   /* GET RID OF MENU OPTIONS AND MAKE MENU ICON*/
-	#about-button{
-		display:none;
-	}
-
-	#menu-icon{
-		display:inline;
-		padding-top:.25em;
-	}
 }
 
 @media (max-width: 821px) {
   h1{
     font-size:20px;
   }
-  
-    /* MAKE MENU ICON PRETTY*/
-  	#menu-icon{
-		padding-top:.2em;
-	}
+
   
 }
 
@@ -360,7 +346,7 @@ h1{
 	float:right;
 	font-size: 16px;
 	padding-right: 50px;
-	padding-top: 15px;
+    padding-top: 1em;
 }  
 }
 
@@ -378,8 +364,8 @@ h1{
  #about-button{
 	float:right;
 	font-size: 12px;
-	padding-right: 50px;
-	padding-top: 15px;
+	padding-right: 30px;
+	padding-top: 1em;
 }
  
 }
@@ -415,9 +401,20 @@ h1{
 	  display:block;
  }
 
-.dropdown-content {
-    display: block;
-}
+
+    /* GET RID OF MENU OPTIONS AND MAKE MENU ICON*/
+    #about-button{
+        display:none;
+    }
+
+    #menu-icon{
+        display:inline;
+        padding-top:.25em;
+    }
+
+    .dropdown-content {
+        display: block;
+    }
 
  
  h1 {
