--- a/css/style.css
+++ b/css/style.css
@@ -1,173 +1,186 @@
 /* Whole map */
-html, body, #map {
+
+html,
+body,
+#map {
     height: 100%;
     width: 100%;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;    
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 #map {
     position: absolute;
 }
 
-/* PUT THE MAP ON TOP*/
-.leaflet-top{
-  z-index: 9999999999999999999;
-}
 
-/* BROWSER ADDS MARGIN BY DEFAULT. THIS GETS RID OF SCROLLBAR*/
+/* BROWSER ADDS MARGIN BY DEFAULT. THIS GETS RID OF SCROLLBAR */
+
 body {
-  margin: 0;
+    margin: 0;
 }
 
 
+/**********************************************************************/
 
 /* STYLING AND POSITIONING THE MAIN HEADER */
+
 #title {
-  position: fixed;
-  z-index: 100000;
-  top: 0;
-  left: 0;
-  width:100%;
-  padding-top:10px;
-  padding-bottom:.5;
-  background-color: rgba(35, 31, 32,1);
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 400;
-  color: rgb(255, 189, 0);
+    position: fixed;
+    z-index: 100000;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: .5;
+    background-color: rgba(35, 31, 32, 1);
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    color: rgb(255, 189, 0);
 
 }
 
 /* STYLING & POSITIONING THE MOBILE HEADER */
+
 #mobile-title {
-  display:none;
-  position: fixed;
-  z-index: 100000;
-  top: 0;
-  left: 0;
-  width:100%;
-  padding-top:10px;
-  padding-bottom:1em;
-  background-color: rgba(35, 31, 32,1);
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 400;
-  color: rgb(255, 189, 0);
+    display: none;
+    position: fixed;
+    z-index: 100000;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 1em;
+    background-color: rgba(35, 31, 32, 1);
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    color: rgb(255, 189, 0);
 
 }
 
 /* BROWSER INTERPRETS TITLE AS H1, SO USE THIS FOR STYLING THE TITLE */
-h1{
-  margin-left: 15px;
-  margin-right:15px;
-  margin-top:10px;
-  font-size: 36px;
-  background-color: rgba (0,0,0,0)
 
+h1 {
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 10px;
+    font-size: 36px;
+    background-color: rgba (0, 0, 0, 0)
 }
 
 
+/**********************************************************************/
 
 /* MENU ITEMS POSITIONING */
+
 #top-buttons {
-  position: fixed;
-  z-index: 100001;
-  top: 0;
-  left: 0;
-  width:100%;
-  padding-top:10px;
-  padding-bottom:.5;
-  background-color: rgba(35, 31, 32,0);
-  
+    position: fixed;
+    z-index: 100001;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: .5;
+    background-color: rgba(35, 31, 32, 0);
+
 }
 
 
-/* MENU ITEM STYLING*/
-#about-button{
-	float:right;
-	padding-right: 50px;
-	padding-top: 20px;
-}
+/* MENU ITEM STYLING */
 
+#about-button {
+    float: right;
+    padding-right: 50px;
+    padding-top: 20px;
+}
 
 
 /* MENU ITEMS TEXT STYLING*/
-#top-buttons a{
-	text-decoration: none;
-	font-size:20px;
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-weight: 400;
-	color: rgb(255, 189, 0);
+
+#top-buttons a {
+    text-decoration: none;
+    font-size: 20px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    color: rgb(255, 189, 0);
 }
 
 /* MENU ITEM POSITIONING */
-#about-button{
-	float:right;
-	font-size: 20px;
-	padding-right: 50px;
-	padding-top: 20px;
+
+#about-button {
+    float: right;
+    font-size: 20px;
+    padding-right: 50px;
+    padding-top: 20px;
 }
 
 
-/* MOBILE MENU ICON POSITIONING*/
-#menu-icon{
-	float:right;
-	padding-right: 25px;
-	padding-top: 1em;
-	display:none;
+/* MOBILE MENU ICON POSITIONIN G*/
+
+#menu-icon {
+    float: right;
+    padding-right: 25px;
+    padding-top: 1em;
+    display: none;
 }
 
 
 
-/*MOBILE MENU DROPDOWN*/
-
-
+/* MOBILE MENU DROPDOWN */
 
 /* POSITION THE CONTAINER */
+
 .dropdown {
-    float:right;
+    float: right;
     display: inline-block;
 }
 
 
 /* DROPDOWN CONTENT (HIDDEN BY DEFAULT) */
+
 .dropdown-content {
     display: none;
     min-width: 3.7em;
-    padding-right:1em;
+    padding-right: 1em;
     padding-top: .3em;
     z-index: 133248223423423;
 }
 
+
 /* STYLING THE LINKS INSIDE THE DROPDOWN  */
+
 .dropdown-content a {
     font-size: 16px !important;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    padding-top:.5em;
+    padding-top: .5em;
     text-decoration: none;
     display: block;
 }
 
 
 /* CHANGE THE COLOR OF DROPDOWN LINKS ON HOVER */
-.dropdown-content a:hover {background-color: #282828}
 
-
-/* GET RID OF THE ICON UPON HOVER */
-.dropdown:hover #menu-icon {
-    display:none;
+.dropdown-content a:hover {
+    background-color: #282828
 }
 
 
+/* GET RID OF THE ICON UPON HOVER */
+
+.dropdown:hover #menu-icon {
+    display: none;
+}
 
 
-
-
+/**********************************************************************/
 
 
 /* LEAFLETTY STUFF */
 
+/* Leaflet top controls */
 .leaflet-top {
     position: absolute;
     margin-top: 6.2em;
+    padding-top: 1em;
     z-index: 1000;
 }
 
@@ -176,142 +189,151 @@ h1{
     display: none;
 }
 
+
 /* HIDES LEAFLET ZOOM CONTROLS */
- a.leaflet-control-zoom-in, a.leaflet-control-zoom-out{
-	 display:none;
- }
- 
- 
- /* GETS RID OF BASE LAYER CONTROLS */
-
-.leaflet-control-layers-base, .leaflet-control-layers-separator {
-  display: none;
+a.leaflet-control-zoom-in,
+a.leaflet-control-zoom-out {
+    display: none;
 }
 
 
+/* GETS RID OF BASE LAYER CONTROLS */
+.leaflet-control-layers-base,
+.leaflet-control-layers-separator {
+    display: none;
+}
 
 
-/* POPUP STUFF */ 
+/**********************************************************************/
 
-.item-key{
-	color: rgb(255, 189, 0);
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+/* POPUP STUFF */
+
+.item-key {
+    color: rgb(255, 189, 0);
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 }
 
-.item-value{
-	color:white;
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+.item-value {
+    color: white;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-	
+
 .custom-popup .leaflet-popup-content-wrapper {
-  background-color: rgba(0,0,0, .80);
-  color:white;
-  border-radius:8px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 400;
-  font-size:14px;
-  line-height:24px;
-  width: auto;
-  height:auto;
+    background-color: rgba(0, 0, 0, .80);
+    color: white;
+    border-radius: 8px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    width: auto;
+    height: auto;
 }
 
 .custom-popup .leaflet-popup-content {
-  margin: 1em;
+    margin: 1em;
 }
 
-.leaflet-popup-content-wrapper, .leaflet-popup-tip{
-  background: rgba(0, 0, 0, 0.6);
+.leaflet-popup-content-wrapper,
+.leaflet-popup-tip {
+    background: rgba(0, 0, 0, 0.6);
 }
 
 
+/**********************************************************************/
 
-/*GEOSEARCH STUFF */
+/* GEOSEARCH STUFF */
 
-//Search bar
+/* Search bar */
 .leaflet-center {
-	width: 40%;
-	margin-left: auto;
-	margin-right: auto;
-	position: relative;
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
 }
-.leaflet-control-geosearch, .leaflet-control-geosearch ul {
-	border-radius: 7px;
-	background: none repeat scroll 0 0 rgba(0, 0, 0, 0.25);
-	margin: 10px 0 0 0;
-	top: 7em;
-	padding: 5px;
-	margin-left:12px;
-	width: 250px;
-	height: auto;
+
+.leaflet-control-geosearch,
+.leaflet-control-geosearch ul {
+    border-radius: 7px;
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.25);
+    margin: 10px 0 0 0;
+    top: 7em;
+    padding: 5px;
+    margin-left: 12px;
+    width: 250px;
+    height: auto;
 }
+
 .leaflet-control-geosearch-msg ul {
-	list-style: none;
-	display: none;
-	height: auto;
-	background: none;
-	padding: 0;
+    list-style: none;
+    display: none;
+    height: auto;
+    background: none;
+    padding: 0;
 }
+
 .leaflet-control-geosearch ul li {
-	background: none repeat scroll 0 0 rgba(255, 255, 255, 0.75);
+    background: none repeat scroll 0 0 rgba(255, 255, 255, 0.75);
     border-radius: 4px;
     margin: 20px 0;
     padding: 4px;
     font: 12px arial;
     text-indent: 4px;
 }
+
 .leaflet-container .leaflet-control-geosearch input {
-	width: 100%;
-	height: 28px;
-	padding: 0;
-	text-indent: 8px;
-	background: rgba(255, 255, 255, 0.75);			
-	border-radius: 4px;
-	border: none;
+    width: 100%;
+    height: 28px;
+    padding: 0;
+    text-indent: 8px;
+    background: rgba(255, 255, 255, 0.75);
+    border-radius: 4px;
+    border: none;
 }
 
 
+/**********************************************************************/
 
-/* NOT QUITE BIG, BUT NOT QUITE SMALL */
-
+/* MEDIUM SCREEN SIZES (800px - 1360px) */
 
 @media (max-width: 1360px) {
-/* CHANGE SIZE OF HEADER TITLE*/	
-  h1{
-    font-size:38px;
-  }
+    /* CHANGE SIZE OF HEADER TITLE*/
+    h1 {
+        font-size: 38px;
+    }
 }
 
 @media (max-width: 1320px) {
-  h1{
-    font-size:36px;
-  }
+    h1 {
+        font-size: 36px;
+    }
 }
 
 @media (max-width: 1260px) {
-h1{
-font-size:34px;
-}
+    h1 {
+        font-size: 34px;
+    }
 
-.leaflet-top {
-    margin-top: 5.8em;
-}
+    .leaflet-top {
+        margin-top: 5.8em;
+    }
 }
 
 @media (max-width: 1198px) {
-  h1{
-    font-size:32px;
-  }
+    h1 {
+        font-size: 32px;
+    }
 
-.leaflet-top {
-    margin-top: 5.6em;
-}
+    .leaflet-top {
+        margin-top: 5.6em;
+    }
 }
 
 
 @media (max-width: 1160px) {
-    h1{
-        font-size:32px;
+    h1 {
+        font-size: 32px;
     }
 
     .leaflet-top {
@@ -320,99 +342,99 @@ font-size:34px;
 }
 
 @media (max-width: 1135px) {
-  h1{
-    font-size:30px;
-  }
+    h1 {
+        font-size: 30px;
+    }
 
 }
 
 @media (max-width: 1072px) {
-  h1{
-    font-size:28px;
-  }
+    h1 {
+        font-size: 28px;
+    }
 
-.leaflet-top {
-    margin-top: 5em;
-}
+    .leaflet-top {
+        margin-top: 5em;
+    }
 }
 
 @media (max-width: 1024px) {
-  h1{
-    font-size:26px;
-  }
+    h1 {
+        font-size: 26px;
+    }
 
-.leaflet-top {
-    margin-top: 4.7em;
-}
+    .leaflet-top {
+        margin-top: 4.7em;
+    }
 }
 
 
 @media (max-width: 900px) {
-.leaflet-top {
-    margin-top: 4.3em;
-}
+    .leaflet-top {
+        margin-top: 4.3em;
+    }
 }
 
 
 @media (max-width: 880px) {
-h1{
-font-size:22px;
-}
+    h1 {
+        font-size: 22px;
+    }
 
-.leaflet-top {
-    margin-top: 4.3em;
-}
+    .leaflet-top {
+        margin-top: 4.3em;
+    }
 }
 
 @media (max-width: 821px) {
-  h1{
-    font-size:20px;
-  }
+    h1 {
+        font-size: 20px;
+    }
 
-.leaflet-top {
-    margin-top: 4em;
+    .leaflet-top {
+        margin-top: 4em;
+    }
 }
-}
 
 
 
 
- /* MAKE MENU BUTTONS SMALLER AS PORT GETS SMALLER */
+/* MAKE MENU BUTTONS SMALLER AS PORT GETS SMALLER */
 
 @media (max-width: 946px) {
-  h1{
-    font-size:24px;
-  }
-  
-	#about-button{
-	float:right;
-	font-size: 16px;
-	padding-right: 50px;
-    padding-top: 1em;
-}  
+    h1 {
+        font-size: 24px;
+    }
+
+    #about-button {
+        float: right;
+        font-size: 16px;
+        padding-right: 50px;
+        padding-top: 1em;
+    }
 }
 
 
 @media (max-width: 758px) {
-  #title{
-    padding-bottom:10px;
-  }
+    #title {
+        padding-bottom: 10px;
+    }
 
-.leaflet-top {
-    margin-top: 3.8em;
-}
+    .leaflet-top {
+        margin-top: 3.8em;
+    }
 
- h1 {
-    margin-bottom: 0;
-    font-size:22px;
-  }
-  
- #about-button{
-	float:right;
-	font-size: 12px;
-	padding-right: 30px;
-	padding-top: 1em;
-}
+    h1 {
+        margin-bottom: 0;
+        font-size: 22px;
+    }
+
+    #about-button {
+        float: right;
+        font-size: 12px;
+        padding-right: 30px;
+        padding-top: 1em;
+    }
 }
 
 @media (max-width: 720px) {
@@ -423,61 +445,59 @@ font-size:22px;
 
 
 
+/**********************************************************************/
+
+/* PHONE SCREEN SIZES (600px OR LESS) */
+
+@media (max-width: 600px) {
+
+    /* POSITION ADDRESS SEARCH BOX*/
+    .leaflet-control-geosearch,
+    .leaflet-control-geosearch ul {
+        border-radius: 7px;
+        background: none repeat scroll 0 0 rgba(0, 0, 0, 0.25);
+        margin: 10px 0 0 0;
+        top: 8.75em;
+        padding: 5px;
+        margin-left: 12px;
+        width: 24em;
+        ;
+        height: auto;
+    }
 
 
+    /* DIFFERENT FORMATTING OF HEADER TITLE ON MOBILE */
+    #title {
+        display: none;
+    }
 
-/* CELLULAR TELEPHONE */
-/* CSS BELOW */
+    #mobile-title {
+        display: block;
+    }
 
-@media (max-width: 600px){
-	
-/* POSITION ADDRESS SEARCH BOX*/	
-.leaflet-control-geosearch, .leaflet-control-geosearch ul {
-	border-radius: 7px;
-	background: none repeat scroll 0 0 rgba(0, 0, 0, 0.25);
-	margin: 10px 0 0 0;
-	top: 8.75em;
-	padding: 5px;
-	margin-left:12px;
-	width: 24em;;
-	height: auto;
+
+    /* GET RID OF MENU OPTIONS AND MAKE MENU ICON */
+    #about-button {
+        display: none;
+    }
+
+    #menu-icon {
+        display: inline;
+        padding-top: .25em;
+    }
+
+    .dropdown-content {
+        display: block;
+    }
+
+    .leaflet-top {
+        margin-top: 7.2em;
+    }
+
+
+    h1 {
+        font-size: 24px;
+        line-height: 1.3;
+        padding-left: .3em;
+    }
 }
-  
- 
-/* DIFFERENT FORMATTING OF HEADER TITLE ON MOBILE*/	 
- #title{
-	  display:none;
- }	  
-  
- #mobile-title{
-	  display:block;
- }
-
-
-/* GET RID OF MENU OPTIONS AND MAKE MENU ICON*/
-#about-button{
-    display:none;
-}
-
-#menu-icon{
-    display:inline;
-    padding-top:.25em;
-}
-
-.dropdown-content {
-    display: block;
-}
-
-.leaflet-top {
-    margin-top: 7.2em;
-}
-
- 
- h1 {
-     font-size:24px;
-     line-height:1.3;
-     padding-left:.3em;
-  }
-}
-
-
