--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,10 @@ body {
 }
 
 
-/**********************************************************************/
 
+
+
+/**********************************************************************/
 /* STYLING AND POSITIONING THE MAIN HEADER */
 
 #title {
@@ -68,10 +70,21 @@ h1 {
 }
 
 
-/**********************************************************************/
 
+
+
+
+
+
+
+
+
+
+
+/**********************************************************************/
 /* MENU ITEMS POSITIONING */
 
+/*CONTAINER FOR ALL BUTTONS, MOBILE & DESKTOP */
 #top-buttons {
     position: fixed;
     z-index: 100001;
@@ -80,22 +93,36 @@ h1 {
     width: 100%;
     padding-top: 10px;
     padding-bottom: .5;
-    background-color: rgba(35, 31, 32, 0);
-
 }
 
 
 /* MENU ITEM STYLING */
-
 #about-button {
+    text-transform:uppercase;
+     float: right;
+     padding-right: 50px;
+     padding-top: 20px;
+     font-size: 20px;
+     text-decoration: none;
+     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+     font-weight: 400;
+     color: rgb(255, 189, 0);
+ }
+
+#data-button {
+    text-transform:uppercase;
     float: right;
     padding-right: 50px;
     padding-top: 20px;
+    font-size: 20px;
+    text-decoration: none;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    color: rgb(255, 189, 0);
 }
 
 
 /* MENU ITEMS TEXT STYLING*/
-
 #top-buttons a {
     text-decoration: none;
     font-size: 20px;
@@ -104,76 +131,64 @@ h1 {
     color: rgb(255, 189, 0);
 }
 
-/* MENU ITEM POSITIONING */
 
-#about-button {
+
+
+
+
+
+/************************************************************/
+/* CSS RELATED TO MODAL INFORMATION WINDOWS */
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    z-index:999999999999999999999999999999999;
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
     float: right;
-    font-size: 20px;
-    padding-right: 50px;
-    padding-top: 20px;
+    font-size: 28px;
+    font-weight: bold;
 }
 
-
-/* MOBILE MENU ICON POSITIONIN G*/
-
-#menu-icon {
-    float: right;
-    padding-right: 25px;
-    padding-top: 1em;
-    display: none;
-}
-
-
-
-/* MOBILE MENU DROPDOWN */
-
-/* POSITION THE CONTAINER */
-
-.dropdown {
-    float: right;
-    display: inline-block;
-}
-
-
-/* DROPDOWN CONTENT (HIDDEN BY DEFAULT) */
-
-.dropdown-content {
-    display: none;
-    min-width: 3.7em;
-    padding-right: 1em;
-    padding-top: .3em;
-    z-index: 133248223423423;
-}
-
-
-/* STYLING THE LINKS INSIDE THE DROPDOWN  */
-
-.dropdown-content a {
-    font-size: 16px !important;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    padding-top: .5em;
+.close:hover,
+.close:focus {
+    color: black;
     text-decoration: none;
-    display: block;
+    cursor: pointer;
 }
 
 
-/* CHANGE THE COLOR OF DROPDOWN LINKS ON HOVER */
-
-.dropdown-content a:hover {
-    background-color: #282828
-}
 
 
-/* GET RID OF THE ICON UPON HOVER */
 
-.dropdown:hover #menu-icon {
-    display: none;
-}
+
+
+
 
 
 /**********************************************************************/
-
-
 /* LEAFLETTY STUFF */
 
 /* Leaflet top controls */
@@ -204,9 +219,12 @@ a.leaflet-control-zoom-out {
 }
 
 
-/**********************************************************************/
 
-/* POPUP STUFF */
+
+
+
+/**********************************************************************/
+/* BOUNDARY POPUP STUFF */
 
 .item-key {
     color: rgb(255, 189, 0);
@@ -241,8 +259,13 @@ a.leaflet-control-zoom-out {
 }
 
 
-/**********************************************************************/
 
+
+
+
+
+
+/**********************************************************************/
 /* GEOSEARCH STUFF */
 
 /* Search bar */
@@ -293,8 +316,10 @@ a.leaflet-control-zoom-out {
 }
 
 
-/**********************************************************************/
 
+
+
+/**********************************************************************/
 /* MEDIUM SCREEN SIZES (800px - 1360px) */
 
 @media (max-width: 1360px) {
@@ -408,13 +433,19 @@ a.leaflet-control-zoom-out {
 
 
 /* MAKE MENU BUTTONS SMALLER AS PORT GETS SMALLER */
-
 @media (max-width: 946px) {
     h1 {
         font-size: 24px;
     }
 
     #about-button {
+             float: right;
+             font-size: 16px;
+             padding-right: 50px;
+             padding-top: 1em;
+         }
+
+    #data-button {
         float: right;
         font-size: 16px;
         padding-right: 50px;
@@ -444,6 +475,13 @@ a.leaflet-control-zoom-out {
         padding-right: 30px;
         padding-top: 1em;
     }
+
+    #data-button {
+        float: right;
+        font-size: 12px;
+        padding-right: 30px;
+        padding-top: 1em;
+    }
 }
 
 @media (max-width: 720px) {
@@ -456,7 +494,6 @@ a.leaflet-control-zoom-out {
 
 
 /**********************************************************************/
-
 /* PHONE SCREEN SIZES (600px OR LESS) */
 
 @media (max-width: 600px) {
@@ -486,27 +523,50 @@ a.leaflet-control-zoom-out {
     }
 
 
-    /* GET RID OF MENU OPTIONS AND MAKE MENU ICON */
+    .mobile-buttons{
+        width: 5em;
+        float:right;
+    }
+
+
+    /* STYLING MENU ITEMS */
     #about-button {
-        display: none;
+        min-width: 3.7em;
+        padding-right: 1em;
+        font-size:16px;
+        text-transform:none;
+        padding-top:.7em;
+     }
+
+    #data-button {
+        min-width: 3.7em;
+        padding-right: 1em;
+        font-size:16px;
+        text-transform:none;
+        padding-top:1em;
+
     }
 
-    #menu-icon {
-        display: inline;
-        padding-top: .25em;
-    }
 
-    /* MOBILE LINKS */
-    .dropdown-content {
-        display: block;
-        padding-top:.2em;
-    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     /* POSITIONING SEARCH BAR */
     .leaflet-top {
         margin-top: 7.2em;
     }
-
 
     /* TITLE */
     h1 {
