--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ h1 {
 
 /* MENU ITEM STYLING */
 #about-button {
+    cursor:pointer;
     text-transform:uppercase;
      float: right;
      padding-right: 50px;
@@ -110,6 +111,7 @@ h1 {
  }
 
 #data-button {
+    cursor:pointer;
     text-transform:uppercase;
     float: right;
     padding-right: 50px;
@@ -140,7 +142,7 @@ h1 {
 /************************************************************/
 /* CSS RELATED TO MODAL INFORMATION WINDOWS */
 
-/* The Modal (background) */
+/* THE MODAL (BACKGROUND) */
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
@@ -155,7 +157,7 @@ h1 {
     z-index:999999999999999999999999999999999;
 }
 
-/* Modal Content/Box */
+/* MODAL CONTENT BOX*/
 .modal-content {
     background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
@@ -164,16 +166,31 @@ h1 {
     width: 80%; /* Could be more or less, depending on screen size */
 }
 
-/* The Close Button */
-.close {
+/* MODAL CLOSE BUTTON */
+.close-data {
     color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+.close-data:hover,
+.close-data:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+.close-about {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close-about:hover,
+.close-about:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
@@ -523,13 +540,13 @@ a.leaflet-control-zoom-out {
     }
 
 
+    /* STYLING MENU ITEMS */
     .mobile-buttons{
         width: 5em;
         float:right;
     }
 
 
-    /* STYLING MENU ITEMS */
     #about-button {
         min-width: 3.7em;
         padding-right: 1em;
@@ -546,21 +563,6 @@ a.leaflet-control-zoom-out {
         padding-top:1em;
 
     }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     /* POSITIONING SEARCH BAR */
