--- a/css/style.css
+++ b/css/style.css
@@ -223,8 +223,9 @@ h1 {
 /* CSS FOR OPACITY SLIDER */
 
 #opacity-slider {
+    position: absolute;
     width: 80%;
-    top: -.3em;
+    margin-top: 50px;
     padding: 6px 15px 4px 15px;
     background: white;
     border-radius: 3px;
@@ -342,12 +343,6 @@ h1 {
 display:none;
 }
 
-.leaflet-control-layers{
-    display:none;
-}
-
-
-
 
 
 
@@ -362,11 +357,26 @@ display:none;
 .item-key {
     color: rgb(255, 189, 0);
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-
+    margin-top: 10px;
 }
 
 .item-value {
     color: white;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.item-link {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin-top: 10px;
+}
+
+.item-link a {
+    color: rgb(255, 189, 0);
+}
+
+.item-link a:hover {
+    color: rgb(255, 189, 0);
+    font-weight: bold;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -561,46 +571,18 @@ display:none;
 
 @media (max-width: 600px) {
 
-
-    .leaflet-control-layers{
-        display:block;
-        left: 5px;
-        top:-.5em;
-        width: 45% !important;
+    /* POSITION ADDRESS SEARCH BOX*/
+    .leaflet-control-geosearch,
+    .leaflet-control-geosearch ul {
+        border-radius: 7px;
+        background: none repeat scroll 0 0 rgba(0, 0, 0, 0.25);
+        margin: 10px 0 0 0;
+        top: 8.75em;
+        padding: 5px;
+        margin-left: 12px;
+        width: 24em;
+        height: auto;
     }
-
-    .leaflet-right{
-        width:320px;
-        left:0;
-    }
-
-    .leaflet-left{
-        width:320px;
-        left:0;
-    }
-
-    .leaflet-top{
-        height:400px;
-    }
-
-
-    .geocoder-control{
-        top:2.25em;
-        left:5px;
-        width: 70% !important;
-    }
-
-    .leaflet-left .leaflet-control{
-        margin-left:0px;
-    }
-    .leaflet-right .leaflet-control{
-        margin-left:0px;
-        float:left;
-    }
-
-
-
-
 
 
     /* DIFFERENT FORMATTING OF HEADER TITLE ON MOBILE */
