--- a/css/style.css
+++ b/css/style.css
@@ -630,6 +630,32 @@ h1 {
 @media (max-width: 600px) {
 	
 	
+	
+	.custom-popup .leaflet-popup-content-wrapper {
+    background-color: rgba(0, 0, 0, .80);
+    color: white;
+	margin-top:20px;
+    border-radius: 8px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    width: 250px;
+	overflow: scroll;
+	height: 250px;
+	bottom: 5px;
+}
+
+
+
+	
+	
+	
+	
+	
+	
+	
+	
 	.leaflet-control-layers{
 		top:.6em;
 	}
