--- a/css/style.css
+++ b/css/style.css
@@ -641,9 +641,20 @@ h1 {
     font-size: 14px;
     line-height: 24px;
     width: 250px;
-	overflow: scroll;
+	overflow: auto;
 	height: 250px;
 	bottom: 5px;
+}
+
+.leaflet-popup{
+	margin-top:20px;
+	width:250px;
+	height:250px;
+}
+
+
+.leaflet-container a.leaflet-popup-close-button{
+	padding:22px 0 0;
 }
 
 
@@ -662,7 +673,7 @@ h1 {
 	
 	
 	.geocoder-control{
-        top:3.35em;
+        top:3.5em;
     }
 
 	
